--- a/index.html
+++ b/index.html
@@ -1,24 +1,38 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Easy Encryptor</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,500" rel="stylesheet">
-  </head>
-  <script src="scripting.js"></script>
-  <body>
-    <div class="body_div">
-      <div class="heading_div">
-        <div class="heading_text_div">
-          <text class="heading">Easy Encryptor</text>
-        </div>
-      </div>
-      <div class="button_div">
-        <button type="button" class="file_button" id="file_button">
-          Select a file for encryption!
-        </button>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Easy Encryptor</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:300,500" rel="stylesheet">
+</head>
+<script src="scripting.js"></script>
+
+<body>
+  <div class="body_div">
+    <div class="heading_div">
+      <div class="heading_text_div">
+        <text class="heading">Easy Encryptor</text>
       </div>
     </div>
-  </body>
+    <div class="selection_div">
+      <button type="button" class="choice" id="choice_easy">
+        easy
+      </button>
+      <button type="button" class="choice" id="choice_medium">
+        medium
+      </button>
+      <button type="button" class="choice" id="choice_hard">
+        hard
+      </button>
+    </div>
+    <div class="button_div">
+      <button type="button" class="file_button" id="file_button">
+        Select a file for encryption!
+      </button>
+    </div>
+  </div>
+</body>
+
 </html>
