--- a/index.html
+++ b/index.html
@@ -18,18 +18,21 @@
     </div>
     <div class="selection_div">
       <button type="button" class="choice" id="choice_easy">
-        easy
+        Easy
       </button>
       <button type="button" class="choice" id="choice_medium">
-        medium
+        Medium
       </button>
       <button type="button" class="choice" id="choice_hard">
-        hard
+        Hard
       </button>
     </div>
     <div class="button_div">
       <button type="button" class="file_button" id="file_button">
         Select a file for encryption!
+      </button>
+      <button type="button" class="dec_file_button" id="dec_file_button">
+        Select a file for decryption!
       </button>
     </div>
   </div>
